# accessible

./: .env.example  .gitignore  AUTHENTICATION.md  BUILD.md  DATABASE.md  GETTING_STARTED.md  Makefile  PROJECT_STRUCTURE.md  README.md  SWITCHING_APIS.md  accessible.code-workspace  build-versioned.sh  bump-version.sh  compose.arch-specific.yaml  compose.yaml  db-ready.sh  init-database.sh  publish-images.sh  pyproject.toml  set-version.sh  setup-env.sh  start-with-api.sh  version.json
api/: README.md
api/app/: main.py  models.py
auth_lib/: __init__.py  config.py  database.py  jwt_utils.py  models.py  schemas.py  security.py
docs/: API.md  BUILD.md  CONFIGURATION.md  PROJECT_STRUCTURE.md  TODO.md
fastDataApi/: .coverage  Dockerfile  README.md  coverage.xml  pytest.ini  requirements-dev.txt  requirements.txt
fastDataApi/app/: __init__.py  database.py  dependencies.py  logging_config.py  main.py  models.py  schemas.py
fastDataApi/tests/: README.md  __init__.py  conftest.py  test_artists.py  test_health.py  test_songs.py
flaskDataApi/: .coverage  Dockerfile  README.md  coverage.xml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
flaskDataApi/app/: __init__.py  database.py  decorators.py  errors.py  logging_config.py  models.py  schemas.py
flaskDataApi/tests/: README.md  __init__.py  conftest.py  test_artists.py  test_health.py  test_songs.py
nextui/: .gitignore  Dockerfile
nextui/components/: SongList.tsx  SongTable.tsx
nextui/lib/: api.ts
sql/: auth_schema.sql  auth_seed.sql  init_db.sql  schema.sql  seed_data.sql
(+23 files in other folders)
